--- a/docs/.vitepress/theme/styles.css
+++ b/docs/.vitepress/theme/styles.css
@@ -1,9 +1,27 @@
 :root {
-    --vp-c-brand: #f7c6aa;
-    --vp-c-brand-light: #f7c6aa;
-    --vp-c-brand-dark: #775f51;
+    --dark-pink: #27171f;
+    --megu-pink: #fedadf;
+    --cocoa: #f7c6aa;
+    --cocoa-dark: #c39d86;
+    --cocoa-dark-2: #e18b69;
+
+    --vp-c-brand: var(--cocoa-dark-2);
+    --vp-c-brand-light: var(--cocoa);
+    --vp-c-brand-dark: var(--cocoa-dark);
+    --vp-c-bg-alt: var(--megu-pink);
 }
 
 .dark {
-    --vp-c-bg-alt: #27171f;
+    --vp-c-brand: var(--cocoa);
+    --vp-c-brand-light: var(--cocoa);
+    --vp-c-brand-dark: var(--cocoa-dark);
+    --vp-c-bg-alt: var(--dark-pink);
+}
+
+.VPContent.is-home {
+    background-color: var(--megu-pink);
+}
+
+.dark .VPContent.is-home {
+    background-color: var(--dark-pink);
 }
